force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/VisMed_ObjetivoPorCuenta__c.object-meta.xml
<CustomObject>
    <description>Objeto que relacionará el profesional o la institución con el objetivo.</description>
    <label>Objetivo por cuenta</label>
    <nameField>
        <displayFormat>ObjXCue-{0000}</displayFormat>
        <label>Nombre de Objetivo por cuenta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objetivos por cuenta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>