force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/fields/Jefe_de_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Jefe_de_Supervisor__c</fullName>
    <formula>VisMed_APMContacto__r.Owner.Manager.Manager.FirstName + &apos; &apos; + VisMed_APMContacto__r.Owner.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jefe de Supervisor</label>
    <type>Text</type>
</CustomField>