force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/fields/VisMed_CantidadAcciones__c.field-meta.xml
<CustomField>
    <fullName>VisMed_CantidadAcciones__c</fullName>
    <label>Cantidad de acciones</label>
    <summaryForeignKey>VisMed_AccionPorCuenta__c.VisMed_ObjetivoPorCuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>