force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/fields/VisMed_FechaFin__c.field-meta.xml
<CustomField>
    <fullName>VisMed_FechaFin__c</fullName>
    <formula>VisMed_Objetivo__r.VisMed_FechaFin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de fin</label>
    <type>Date</type>
</CustomField>