force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/fields/VisMed_FechaInicio__c.field-meta.xml
<CustomField>
    <fullName>VisMed_FechaInicio__c</fullName>
    <formula>VisMed_Objetivo__r.VisMed_FechaInicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>