force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/fields/VisMed_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Objetivo__c</fullName>
    <label>Objetivo</label>
    <referenceTo>VisMed_Objetivo__c</referenceTo>
    <relationshipLabel>Objetivos por cuenta</relationshipLabel>
    <relationshipName>Objetivos_por_cuenta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>