force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/fields/VisMed_PorcentajeAvance__c.field-meta.xml
<CustomField>
    <fullName>VisMed_PorcentajeAvance__c</fullName>
    <formula>VisMed_SumatoriaPorcentajesAcciones__c / VisMed_CantidadAcciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje de avance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>