force-app/main/default/objects/VisMed_ObjetivoPorCuenta__c/fields/VisMed_SumatoriaPorcentajesAcciones__c.field-meta.xml
<CustomField>
    <fullName>VisMed_SumatoriaPorcentajesAcciones__c</fullName>
    <label>Sumatoria de porcentajes de acciones</label>
    <summarizedField>VisMed_AccionPorCuenta__c.VisMed_PromedioAvance__c</summarizedField>
    <summaryForeignKey>VisMed_AccionPorCuenta__c.VisMed_ObjetivoPorCuenta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>